394 link text update

--- a/app/views/3-0/manual-home.html
+++ b/app/views/3-0/manual-home.html
@@ -24,8 +24,13 @@
             <p class="summary">{{_thisManual.intro|safe}} {{_thisManual.interest|safe}}</p>
             
             <div class="call-to-action">
-                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View formats for all apprenticeship funding rules 2018 to 2019</a>.</p>
+                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View all formats of apprenticeship funding rules 2018 to 2019</a>.</p>
             </div>
+
+            <!-- <div class="download-manual govuk-inset-text">
+                <p class="govuk-body">Apprenticeship funding rules 2018 to 2019</p>
+                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View the manuals in another format</a>.</p>
+            </div> -->
 
             <!-- <div class="download-manual govuk-inset-text">
                 <p class="govuk-body">
