added column structure to link

--- a/app/views/3-0/manual-home.html
+++ b/app/views/3-0/manual-home.html
@@ -23,8 +23,10 @@
 
             <p class="summary">{{_thisManual.intro|safe}} {{_thisManual.interest|safe}}</p>
             
-            <div class="call-to-action">
-                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View all formats of apprenticeship funding rules 2018 to 2019</a>.</p>
+            <div class="call-to-action govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View all formats of apprenticeship funding rules 2018 to 2019</a>.</p>
+                </div>
             </div>
 
             <!-- <div class="download-manual govuk-inset-text">
