CCW-442 beginning of updates page

--- a/app/views/3-0/includes/manual-header.html
+++ b/app/views/3-0/includes/manual-header.html
@@ -30,10 +30,10 @@
                     <a href="#">Education and Skills Funding Agency</a>
                 </dd>
                 <dt class="gem-c-metadata__term">Published:</dt>
-                <dd class="gem-c-metadata__definition"><time datetime="2015-10-01"> 1 October 2018</time></dd>
+                <dd class="gem-c-metadata__definition"><time datetime="2015-10-01"> 1 August 2018</time></dd>
                 <dt class="gem-c-metadata__term">Updated:</dt>
                 <dd class="gem-c-metadata__definition">
-                    <time datetime="2018-10-01">1 October 2018</time>, <a href="#">see all updates</a>
+                    <time datetime="2018-10-01">1 August 2018</time>, <a href="manual-updates?manual={{myData.manual}}">see all updates</a>
                 </dd>
             </dl>
         </div>
