--- a/app/views/3-0/rules-list.html
+++ b/app/views/3-0/rules-list.html
@@ -325,8 +325,6 @@
                         <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
                         <span class="page-length">59 pages</span>
                       </p>
-  
-  
                       <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
                         <h2>This file may not be suitable for users of assistive technology.
                           <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
@@ -341,6 +339,48 @@
                         </p>
                       </div>
                     </div>
+                  </section>
+
+                  <!-- PROVIDERS -->
+                  <section class="attachment embedded" id="attachment_2875833">
+                    <div class="attachment-thumb">
+                      <a aria-hidden="true" class="thumbnail" href="manual-home?manual=providers-manual-original"><img
+                          alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                    </div>
+                    <div class="attachment-details">
+                      <h2 class="title"><a href="manual-home?manual=providers-manual-original">Apprenticeship funding:
+                          rules and guidance for training providers</a></h2>
+                      <p class="metadata">
+                        <span class="type">HTML</span>
+                      </p>
+                    </div>
+                  </section>
+                  <section class="attachment embedded" id="attachment_2875834">
+                      <div class="attachment-thumb">
+                        <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+                      </div>
+                      <div class="attachment-details">
+                        <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Provider_Rules_v1.0.pdf">Apprenticeship funding:
+                          rules and guidance for training providers</a></h2>
+                        <p class="metadata">
+                          <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
+                          <span class="page-length">72 pages</span>
+                        </p>
+    
+                        <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
+                          <h2>This file may not be suitable for users of assistive technology.
+                            <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
+                              data-expanded="false">Request an accessible format.</a>
+                          </h2>
+                          <p id="attachment-2875834-accessibility-request" class="js-hidden">
+                            If you use assistive technology (such as a screen reader) and need a
+                            version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
+                            Please tell us what format you need. It will help us if you say what assistive technology you
+                            use.
+    
+                          </p>
+                        </div>
+                      </div>
                   </section>
 
                   <!-- EMPLOYER PROVIDERS -->
@@ -349,42 +389,12 @@
                     <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
                   </div>
                   <div class="attachment-details">
-                    <h2 class="title"><a href="#">Apprenticeship funding: rules for employer-providers</a></h2>
+                    <h2 class="title"><a href="#">Apprenticeship funding: rules and guidance for employer-providers</a></h2>
                     <p class="metadata">
                       <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">1.33MB</span>,
                       <span class="page-length">67 pages</span>
                     </p>
-                  </div>
-                </section>
-
-                <!-- PROVIDRS -->
-                <section class="attachment embedded" id="attachment_2875833">
-                  <div class="attachment-thumb">
-                    <a aria-hidden="true" class="thumbnail" href="manual-home?manual=providers-manual-original"><img
-                        alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                  </div>
-                  <div class="attachment-details">
-                    <h2 class="title"><a href="manual-home?manual=providers-manual-original">Apprenticeship funding:
-                        rules for training providers</a></h2>
-                    <p class="metadata">
-                      <span class="type">HTML</span>
-                    </p>
-                  </div>
-                </section>
-                <section class="attachment embedded" id="attachment_2875834">
-                    <div class="attachment-thumb">
-                      <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                    </div>
-                    <div class="attachment-details">
-                      <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="/public/downloads/1819_Provider_Rules_v1.0.pdf">Apprenticeship funding:
-                        rules and guidance for training providers</a></h2>
-                      <p class="metadata">
-                        <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.3MB</span>,
-                        <span class="page-length">72 pages</span>
-                      </p>
-  
-  
-                      <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
+                    <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
                         <h2>This file may not be suitable for users of assistive technology.
                           <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
                             data-expanded="false">Request an accessible format.</a>
@@ -397,38 +407,10 @@
   
                         </p>
                       </div>
-                    </div>
-                  </section>
-
-                <section class="attachment embedded" id="attachment_2875834">
-                  <div class="attachment-thumb">
-                    <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
-                  </div>
-                  <div class="attachment-details">
-                    <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="#">Apprenticeship
-                        funding rules 2018 to 2019: summary of changes</a></h2>
-                    <p class="metadata">
-                      <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">1.09MB</span>,
-                      <span class="page-length">17 pages</span>
-                    </p>
-
-
-                    <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
-                      <h2>This file may not be suitable for users of assistive technology.
-                        <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
-                          data-expanded="false">Request an accessible format.</a>
-                      </h2>
-                      <p id="attachment-2875834-accessibility-request" class="js-hidden">
-                        If you use assistive technology (such as a screen reader) and need a
-                        version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
-                        Please tell us what format you need. It will help us if you say what assistive technology you
-                        use.
-
-                      </p>
-                    </div>
                   </div>
                 </section>
 
+                <!-- Performace mgmt rules -->
                 <section class="attachment embedded" id="attachment_2875835">
                   <div class="attachment-thumb">
                     <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
@@ -440,17 +422,26 @@
                       <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">633KB</span>,
                       <span class="page-length">16 pages</span>
                     </p>
-
+                    <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
+                        <h2>This file may not be suitable for users of assistive technology.
+                          <a class="toggler" href="#attachment-2875834-accessibility-request" data-controls="attachment-2875834-accessibility-request"
+                            data-expanded="false">Request an accessible format.</a>
+                        </h2>
+                        <p id="attachment-2875834-accessibility-request" class="js-hidden">
+                          If you use assistive technology (such as a screen reader) and need a
+                          version of this document in a more accessible format, please email <a href="#">sde.servicedesk@education.gov.uk</a>.
+                          Please tell us what format you need. It will help us if you say what assistive technology you
+                          use.
+  
+                        </p>
+                      </div>
 
                   </div>
                 </section>
+
               </div>
-
             </div>
-
             <h2 class="gem-c-heading  gem-c-heading--mobile-top-margin  " id="details-title">Details</h2>
-
-
             <div aria-labelledby="details-title">
 
               <div class="gem-c-govspeak govuk-govspeak direction-ltr">
