--- a/app/views/3-0/flow-charts.html
+++ b/app/views/3-0/flow-charts.html
@@ -1,16 +1,179 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Manual
+GOV.UK Manual
 {% endblock %}
 
 {% block pageStyles %}
 <style>
-.svg-container svg,
-.html-container,
-.flow-chart {
-    width: 100%;
-    margin-bottom: 60px;
+    .svg-container svg,
+    .html-container,
+    .flow-chart {
+        width: 100%;
+        margin-bottom: 60px;
+    }
+
+    .svg-container-2 p {
+        margin-bottom: 0;
+    }
+
+    
+    .decision-tree {
+    list-style: none;
+    margin: 1em 0;
+    padding: 0
+}
+
+.decision-tree > li {
+    border: 2px solid #999;
+    border-top: none
+}
+
+.decision-tree > li > strong {
+    display: block;
+    padding: 1em .5em
+}
+
+.decision-tree > li:first-child {
+    border-top: 2px solid #999
+}
+
+.decision-tree > li > ul {
+    padding: 0;
+    list-style: none;
+    border-top: 1px dotted #aaa
+}
+
+.decision-tree > li > ul {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch
+}
+
+.decision-tree > li > ul > li {
+    text-indent: 0;
+    box-sizing: border-box;
+    font-weight: normal;
+    padding: .5em
+}
+
+.decision-tree > li > ul > li {
+    -webkit-flex-basis: 25%;
+    -ms-flex-preferred-size: 25%;
+    flex-basis: 25%
+}
+
+.decision-tree > li > ul > li:nth-child(odd) {
+    -webkit-flex-basis: 75%;
+    -ms-flex-preferred-size: 75%;
+    flex-basis: 75%
+}
+
+.decision-tree > li > ul > li:nth-child(odd):last-child {
+    display: block;
+    -webkit-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%
+}
+
+.decision-tree > li > ul > li ul {
+    padding: 0;
+    margin: 0
+}
+
+.decision-tree > li > ul > li li {
+    padding: 0;
+    padding-bottom: 0.5em;
+    margin-bottom: 0.5em;
+    border-bottom: 1px solid #888;
+    list-style: none
+}
+
+.decision-tree > li > ul > li li > em {
+    display: block;
+    padding-left: 1.5em;
+    position: relative;
+    margin-top: .25em;
+    font-style: normal
+}
+
+.decision-tree > li > ul > li li > em:before {
+    position: absolute;
+    content: '';
+    top: .2em;
+    margin-left: -1.5em
+}
+
+.decision-tree > li > ul > li li:last-child {
+    border-bottom-style: none;
+    padding-bottom: 0;
+    margin-bottom: 0
+}
+
+.decision-tree .yes {
+    background-color: #D9EDF7;
+    border-bottom: none
+}
+
+.decision-tree .yes li {
+    list-style: disc;
+    margin-left: 1em
+}
+
+.decision-tree .yes li:only-child {
+    list-style: none
+}
+
+.decision-tree .no {
+    border-right: 1px dotted #aaa;
+    background-color: #F2DEDE;
+    border-bottom: none;
+    position: relative
+}
+
+.decision-tree .no:after {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(119, 119, 119, 0);
+    border-top-color: #F2DEDE;
+    border-width: 1em;
+    margin-left: -.5em;
+    z-index: 500
+}
+
+.decision-tree .no:before {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(119, 119, 119, 0);
+    border-top-color: #999;
+    border-width: 1.2em;
+    margin-left: -.7em;
+    z-index: 400
 }
 </style>
 {% endblock %}
@@ -19,23 +182,106 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Flowcharts</h1>
+        <h1 class="govuk-heading-l">Check what English and maths training an apprentice should undertake.</h1>
 
-        <!-- jpg -->
-        <h2 class="govuk-heading-m">1 - jpeg</h2>
-        <img class="flow-chart" alt="Determine English and maths training - flow chart" src="/public/images/english-maths-flow.jpg" >
-
-        <!-- html viewer -->
-        <h2 class="govuk-heading-m">2 - html (auto generated) - draw.io viewer - requires js</h2>
-        <div class="html-container">
-            {% include "./includes/english-maths.html" %}
-        </div>
+        <!-- Decision tree -->
+        <details class="govuk-details">
+            <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    text based decision tree (doesn't work due to multiple paths after special needs question)
+                </span>
+            </summary>
+            <div class="govuk-details__text">
+                    <ul class="decision-tree ">
+                            <li><strong>Do they have at least level 2 English and maths?</strong>
+                                <ul class="">
+                                    <li class="yes"><strong>Yes:</strong>
+                                        They do not require English and maths training.
+                                    </li>
+                                    <li class="no"><strong>No:</strong>
+                                        <ul class="">
+                                            <li>Continue</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><strong>Does their English and maths qualifications satisfy the standard or framework?</strong>
+                                <ul class="">
+                                    <li class="yes"><strong>Yes:</strong>
+                                        <ul class="">
+                                            <li>Level 2 English and maths.</li>
+                                        </ul>
+                                    </li>
+                                    <li class="no"><strong>No:</strong>
+                                        <ul class="">
+                                            <li>Continue.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><strong>Do they have a special educational need, learning difficulty or disability?</strong>
+                                <ul class="">
+                                    <li class="yes"><strong>Yes:</strong>
+                                        <ul class="">
+                                            <li>Continue.</li>
+                                        </ul>
+                                    </li>
+                                    <li class="no"><strong>No:</strong>
+                                        <ul class="">
+                                            <li>Continue.</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+            </div>
+        </details>
+        
 
         <!-- svg -->
-        <h2 class="govuk-heading-m">3 - svg (auto generated)</h2>
-        <div class="svg-container">
-            {% include "./includes/english-maths.svg" %}
-        </div>
+        <details class="govuk-details">
+            <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    svg (auto generated then fixed manually)
+                </span>
+            </summary>
+            <div class="govuk-details__text">
+                {% include "./includes/english-maths-flow-fixed.svg" %}
+            </div>
+        </details>
+
+        <!-- svg auto  -->
+        <details class="govuk-details">
+            <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    svg (auto generated)
+                </span>
+            </summary>
+            <div class="govuk-details__text">
+                <div class="svg-container">
+                    {% include "./includes/english-maths-flow.svg" %}
+                    {% include "./includes/english-maths.svg" %}
+                </div>
+            </div>
+        </details>
+
+        <!-- jpg -->
+        <details class="govuk-details">
+            <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                    jpegs
+                </span>
+            </summary>
+            <div class="govuk-details__text">
+                <img class="flow-chart" alt="Determine English and maths training - flow chart" src="/public/images/english-maths-flow-3.jpg">
+                <img class="flow-chart" alt="Determine English and maths training - flow chart" src="/public/images/english-maths-flow-2.jpg">
+                <img class="flow-chart" alt="Determine English and maths training - flow chart" src="/public/images/english-maths-flow.jpg">
+            </div>
+        </details>
+
+        <!-- html viewer  -->
+        <h2 class="govuk-heading-s">html draw.io viewer (requires javascript)</h2>
+        {% include "./includes/english-maths.html" %}
 
     </div>
 </div>
