added title to flow chart

--- a/app/views/3-0/manual-page.html
+++ b/app/views/3-0/manual-page.html
@@ -87,7 +87,8 @@
 
                                 <!-- Flow chart -->
                                 {% if subsection.id == "support-english-maths-training" %}
-                                {% include "./includes/english-maths-flow-fixed.svg" %}
+                                    <h3 class="govuk-heading-s">Check what English and maths training an apprentice should undertake.</h3>
+                                    {% include "./includes/english-maths-flow-fixed.svg" %}
                                 {% endif %}
             
                                 <!-- Parts e.g. 19 -->
