--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,13 +10,14 @@
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
           <li>
             Provider Rules Manuals<br>
-            <a href="/3-0/manual-home?manual=providers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
-            <a href="/3-0/google?manual=providers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
+            <a href="/3-0/google?manual=providers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true" class="govuk-link govuk-link--no-visited-state">Original PDF content + flowchart</a>
           </li>
           <li>
               Employer Rules Manuals<br>
-              <a href="/3-0/manual-home?manual=employers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
-              <a href="/3-0/google?manual=employers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
+              <a href="/3-0/manual-home?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
+              <a href="/3-0/google?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
             </li>
         </ul>
       </li>
