413 text decision tree

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,9 +10,10 @@
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
           <li>
             Provider Rules Manuals<br>
-            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
-            <a href="/3-0/google?manual=providers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a><br>
-            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true" class="govuk-link govuk-link--no-visited-state">Original PDF content + flowchart</a>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
+            <a href="/3-0/google?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content + flowchart</a><br>
+            <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=true" class="govuk-link govuk-link--no-visited-state">Original PDF content + text decision tree</a>
           </li>
           <li>
               Employer Rules Manuals<br>
