--- a/app/views/3-0/flow-charts.html
+++ b/app/views/3-0/flow-charts.html
@@ -25,17 +25,17 @@ GOV.UK Manual
 }
 
 .decision-tree > li {
-    border: 2px solid #999;
+    border: 1px solid #999;
     border-top: none
 }
 
-.decision-tree > li > strong {
+.decision-tree > li > span {
     display: block;
     padding: 1em .5em
 }
 
 .decision-tree > li:first-child {
-    border-top: 2px solid #999
+    border-top: 1px solid #999
 }
 
 .decision-tree > li > ul {
@@ -71,15 +71,15 @@ GOV.UK Manual
 }
 
 .decision-tree > li > ul > li {
-    -webkit-flex-basis: 25%;
-    -ms-flex-preferred-size: 25%;
-    flex-basis: 25%
+    -webkit-flex-basis: 40%;
+    -ms-flex-preferred-size: 40%;
+    flex-basis: 40%
 }
 
 .decision-tree > li > ul > li:nth-child(odd) {
-    -webkit-flex-basis: 75%;
-    -ms-flex-preferred-size: 75%;
-    flex-basis: 75%
+    -webkit-flex-basis: 60%;
+    -ms-flex-preferred-size: 60%;
+    flex-basis: 60%
 }
 
 .decision-tree > li > ul > li:nth-child(odd):last-child {
@@ -124,13 +124,19 @@ GOV.UK Manual
 }
 
 .decision-tree .yes {
-    background-color: #D9EDF7;
+    /* background-color: #bfd8cc; */
     border-bottom: none
+}
+.decision-tree .done {
+    background-color: #bfd8cc;
+}
+.decision-tree .done-2 {
+    background-color: #bfd7e8;
 }
 
 .decision-tree .yes li {
     list-style: disc;
-    margin-left: 1em
+    /* margin-left: 1em */
 }
 
 .decision-tree .yes li:only-child {
@@ -139,12 +145,12 @@ GOV.UK Manual
 
 .decision-tree .no {
     border-right: 1px dotted #aaa;
-    background-color: #F2DEDE;
+    /* background-color: #bfd7e8; */
     border-bottom: none;
     position: relative
 }
 
-.decision-tree .no:after {
+/* .decision-tree .no:after {
     top: 100%;
     left: 50%;
     border: solid transparent;
@@ -154,13 +160,13 @@ GOV.UK Manual
     position: absolute;
     pointer-events: none;
     border-color: rgba(119, 119, 119, 0);
-    border-top-color: #F2DEDE;
+    border-top-color: #ebc3c7;
     border-width: 1em;
     margin-left: -.5em;
     z-index: 500
-}
+} */
 
-.decision-tree .no:before {
+/* .decision-tree .no:before {
     top: 100%;
     left: 50%;
     border: solid transparent;
@@ -174,6 +180,15 @@ GOV.UK Manual
     border-width: 1.2em;
     margin-left: -.7em;
     z-index: 400
+} */
+
+
+
+/* call to action */
+.call-to-action {
+    margin: 2em 0;
+    background-color: #dee0e2;
+    padding: 2em;
 }
 </style>
 {% endblock %}
@@ -181,59 +196,146 @@ GOV.UK Manual
 {% block content %}
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <!-- <div class="govuk-grid-column-two-thirds"> -->
+    <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">Check what English and maths training an apprentice should undertake.</h1>
 
         <!-- Decision tree -->
         <details class="govuk-details">
             <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
-                    text based decision tree (doesn't work due to multiple paths after special needs question)
+                    text based decision trees <br>(diffcult to represent a flow chart that has multiple paths)
                 </span>
             </summary>
             <div class="govuk-details__text">
-                    <ul class="decision-tree ">
-                            <li><strong>Do they have at least level 2 English and maths?</strong>
-                                <ul class="">
-                                    <li class="yes"><strong>Yes:</strong>
-                                        They do not require English and maths training.
-                                    </li>
-                                    <li class="no"><strong>No:</strong>
-                                        <ul class="">
-                                            <li>Continue</li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                <!-- Styled like w3 -->
+                <ol class="decision-tree ">
+                    <li><span class="govuk-!-font-weight-bold ">1. Do they have at least level 2 English and maths?</span>
+                        <ul class="">
+                            <li class=" done yes"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>They do not require English and maths training.
                             </li>
-                            <li><strong>Does their English and maths qualifications satisfy the standard or framework?</strong>
-                                <ul class="">
-                                    <li class="yes"><strong>Yes:</strong>
-                                        <ul class="">
-                                            <li>Level 2 English and maths.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="no"><strong>No:</strong>
-                                        <ul class="">
-                                            <li>Continue.</li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li><strong>Do they have a special educational need, learning difficulty or disability?</strong>
-                                <ul class="">
-                                    <li class="yes"><strong>Yes:</strong>
-                                        <ul class="">
-                                            <li>Continue.</li>
-                                        </ul>
-                                    </li>
-                                    <li class="no"><strong>No:</strong>
-                                        <ul class="">
-                                            <li>Continue.</li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                            <li class="no"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Continue
                             </li>
                         </ul>
+                    </li>
+                    <li><span class="govuk-!-font-weight-bold">2. Does their English and maths qualifications satisfy the standard or framework?</span>
+                        <ul class="">
+                            <li class="yes done"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>Level 2 English and maths.
+                            </li>
+                            <li class="no"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Continue
+                            </li>
+                        </ul>
+                    </li>
+                    <li><span class="govuk-!-font-weight-bold">3. Do they have a special educational need, learning difficulty or disability?</span>
+                        <ul class="">
+                            <li class="yes"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>Continue to 4
+                            </li>
+                            <li class="no"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Continue to 5
+                            </li>
+                        </ul>
+                    </li>
+                    <li><span class="govuk-!-font-weight-bold">4. Will they not be able to achieve English and/or maths to the minimum level?</span>
+                        <ul class="">
+                            <li class="yes done"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>We will fund functional level English and maths below level 2 if it is required.
+                                <br>Entry level 3 functional English and maths.
+                            </li>
+                            <li class="no done-2"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Minimum required standards in English and maths.
+                            </li>
+                        </ul>
+                    </li>
+                    <li><span class="govuk-!-font-weight-bold">5. Are they operating below level 1 AND they do not have level 1 or 2 English and maths?
+                        </span>
+                        <ul class="">
+                            <li class="yes done"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>Must achieve level 1 English and maths which we may fund. Then, study toward level 2 which we may also fund.
+                                <br>Minimum required standards in English and maths.
+                            </li>
+                            <li class="no"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Continue
+                            </li>
+                        </ul>
+                    </li>
+                    <li><span class="govuk-!-font-weight-bold">6. Are they operating below level 1 AND have approved qualifications?
+                        </span>
+                        <ul class="">
+                            <li class="yes done"><span class="govuk-!-font-weight-bold">Yes:</span>
+                                <br>Minimum required standards in English and maths
+                            </li>
+                            <li class="no done-2"><span class="govuk-!-font-weight-bold">No:</span>
+                                <br>Must study for level 2 English and maths. If not achieved, must achieve level 1 English and maths which we will not fund
+                                <br>Minimum required standards in English and maths
+                            </li>
+                        </ul>
+                    </li>
+                </ol>
+                <br><br>
+
+                <!-- Text decision tree -->
+                <div class="call-to-action">
+                    <ol class="govuk-list govuk-list--number govuk-body-l">
+                        <li>Does the apprentice have English and Maths at level 2 or higher?
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li>Yes: You’re good to go. <span class="govuk-!-font-weight-bold">End</span>.
+                                </li>
+                                <li>No: Additional funding is available to help the apprentice to receive training for and then achieve up to level 2 English and maths. What we will fund can be determined from the following paragraphs. <span class="govuk-!-font-weight-bold">Go to 2</span>.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Do the apprentice’s English and maths quals. Satisfy the requirements of the standard framework?
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li>
+                                    Yes: The apprentice should be working towards level 2 English and maths, for which we provide funding. <span class="govuk-!-font-weight-bold">End</span>
+                                </li>
+                                <li>
+                                    No: <span class="govuk-!-font-weight-bold">Go to 3</span>.
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Does the apprentice have a SEN/ disability/learning difficulty that affects their ability to achieve the minimum English and maths requirement?
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li>
+                                    Yes: We will fund functional level English and maths below level 2 on a case-by-case basis. See Pxyz to Pabc for details of the conditions and what evidence you need to record. <span class="govuk-!-font-weight-bold">End</span>
+                                </li>
+                                <li>
+                                    No: <span class="govuk-!-font-weight-bold">Go to 5</span>.
+                                </li>
+                            </ul>
+                        </li> 
+                        <li>
+                            Is the apprentice operating below level 1?
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li>
+                                    Yes:
+                                </li>
+                                <li>
+                                    No:
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Does the apprentice have no approved English and maths quals?
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li>
+                                    Yes:
+                                </li>
+                                <li>
+                                    No:
+                                </li>
+                            </ul>
+                        </li>
+                    </ol>
+                </div>
+
             </div>
         </details>
         
