--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
       <li>3-0
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
           <li>
-            Provider Rules Manuals<br>
+            Training Provider Rules Manuals<br>
             <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
             <a href="/3-0/google?manual=providers-manual-original&svgflow=false&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a><br>
             <a href="/3-0/manual-home?manual=providers-manual-original&svgflow=true&textflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content + flowchart</a><br>
@@ -20,6 +20,10 @@
               <a href="/3-0/manual-home?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
               <a href="/3-0/google?manual=employers-manual-original&svgflow=false" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
             </li>
+            <li>
+                Training Provider Rules Heavy Edit<br>
+                <a href="/3-0/guidance" class="govuk-link govuk-link--no-visited-state">Funding for training apprentices in England (Heavy edit)</a>
+                </li>
         </ul>
       </li>
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
